--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,7 @@
         "orhanerday/open-ai": "^5.2",
         "openai-php/client": "^0.10.1",
         "symfony/http-client": "^7.1",
-        "nyholm/psr7": "^1.8",
-        "guzzlehttp/guzzle": "^7.8",
-        "php-http/discovery": "^1.19"
+        "nyholm/psr7": "^1.8"
     },
     "config": {
         "allow-plugins": {
